# course_picker

./: .gitignore  README.md  catalogue.yaml  catalogue_double.yaml  courses.txt  find.py  find_balanced.py  full_schedule-2.yaml  full_schedule.yaml  generate.py  importance.py  options.txt  pyproject.toml  requirements.txt  schedule.py  schedule.yaml  schedule2.yaml  schedule_6semesters.yaml  schedule_7semesters.yaml  schedule_better_7_sems.yaml  schedule_delayed.yaml  schedule_double.yaml  verify.py
examples/schedules/: full_schedule-2.yaml  full_schedule-3.5.yaml  schedule_better.yaml
schedules/: schedule_7semester_2.yaml  schedule_delayed.yaml
scripts/: find.py  generate.py  importance.py  schedule.py
